--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -162,8 +162,6 @@
     .homepage-banner .homepage-banner-wrapper .banner-center-image {
         width: 65%;
         {% case section.settings.content_alignment %}
-            {% when 'center' %}
-              margin: auto;
             {% when 'right' %}
                margin-right: auto;
             {% else %}
@@ -273,10 +271,6 @@
     }
      .banner-content {
       {% case section.settings.content_alignment %}
-        {% when 'center' %}
-          text-align: center;
-          left: 50%;
-          transform: translateX(-50%);
         {% when 'right' %}
           right: 0;
           text-align: right;
@@ -284,7 +278,7 @@
           left: 0;
           text-align: left;
       {% endcase %}
-      max-width: {{ section.settings.content_width | default: 40 }}%;
+      max-width: default: 40%;
       z-index: 1;
       }
     }
@@ -930,10 +924,7 @@
           "value": "left",
           "label": "Left"
         },
-        {
-          "value": "center",
-          "label": "Center"
-        },
+
         {
           "value": "right",
           "label": "Right"
