--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -70,7 +70,20 @@
 
 
                                                         <li data-link="{{ link.handle }}" data-childlink="{{ childlink.handle }}" data-grandchildlink="{{ grandchildlink.handle }}" class="mega-menu__item mega-menu__item--level-3">
-                                                                                                                   <img src="{{ image_url }}" alt="{{ grandchildlink.title | escape }}" class="mega-menu__image" />
+                                                            {% if section.settings.enable_show_on_mobile %}
+                                                                {% style %}
+                                                                    @media-screen and (min-width: 768px){
+                                                                    .mega-menu__image{
+                                                                        display: none;
+                                                                    }
+                                                                    }
+
+                                                                {%endstyle%}
+                                                                <img src="{{ image_url }}" alt="{{ grandchildlink.title | escape }}" class="mega-menu__image" />
+                                                            {% endif %}
+
+
+
                                                             <a
                                                                     id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
                                                                     href="{{ grandchildlink.url }}"
