--- a/snippets/category-image.liquid
+++ b/snippets/category-image.liquid
@@ -38,11 +38,16 @@
     display: block;
     }
 
+    .category-image{
+        width: 145px;
+        height: 75px;
+    }
+
     .category-image__img {
     width: 100%;
-    height: 200px;
+    height: 100%;
     border-radius: 8px;
-    object-fit: cover;
+    object-fit: contain;
     }
 
 
