worked on choose your action section

--- a/sections/choose-your-action.liquid
+++ b/sections/choose-your-action.liquid
@@ -223,7 +223,7 @@
       top: 7rem;
    }
    .choose-action-left .action-label a {
-          font-size: calc(40px + (80 - 40) * ((100vw - 992okpx) / (1920 - 992)));
+          font-size: calc(40px + (80 - 40) * ((100vw - 992px) / (1920 - 992)));
           }
   }
 {% endstyle %}
