--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -231,6 +231,8 @@
     margin: 10px 0;
     line-height: 1.2;
     font-weight: 800;
+    letter-spacing: 2.4px;
+    text-transform: uppercase;
   }
   .colorful-kicks-section .section-subheading {
     margin-block: 0;
