--- a/assets/home-page-product.css
+++ b/assets/home-page-product.css
@@ -1,6 +1,3 @@
-.recommended-section {
-    padding-block: 5rem;
-}
 .recommended-heading {
    font-size: calc(22px + (45 - 22) * ((100vw - 360px) / (1920 - 360)));
     font-weight: 70;
@@ -92,7 +89,7 @@
     min-height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
     object-fit: cover;
     cursor: pointer;
-    border: 1px solid #eee;
+    border: 1px solid #000;
     border-radius: 4px;
     transition: border 0.2s;
 }
@@ -102,7 +99,7 @@
 }
 
 .tabs-wrapper {
-    margin: 30px 0 40px;
+    margin-bottom:  40px;
    font-size: calc(22px + (40 - 22) * ((100vw - 360px) / (1920 - 360)));
 }
 
