--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -59,8 +59,8 @@
 }
 {% endschema %}
 
-<section class="recommended-section page-width" style="background-color: {{ section.settings.tab_background_color }}; padding-block: {{ section.settings.tab_padding }}px; margin-block: {{ section.settings.tab_margin }}px;">
-
+<div style="background-color: {{ section.settings.tab_background_color }}; padding-block: {{ section.settings.tab_padding }}px; margin-block: {{ section.settings.tab_margin }}px;">
+<section class="recommended-section page-width">
   <div class="{% if section.blocks.size > 4 %}swiper{% else %}recommended-grid{% endif %}">
     <h2 class="recommended-heading">{{ section.settings.heading }}</h2>
     <div class="{% if section.blocks.size > 4 %}swiper-wrapper{% endif %}">
@@ -119,7 +119,7 @@
                       {% endif %}
   </div>
 </section>
-
+</div>
 <script defer>
   document.addEventListener('DOMContentLoaded', () => {
     document.querySelectorAll(".thumbnail-wrapper").forEach(parent => {
