--- a/snippets/cstm-header-drawer.liquid
+++ b/snippets/cstm-header-drawer.liquid
@@ -30,8 +30,9 @@
                         class="menu-drawer__menu-item list-menu__item link link--text focus-inset{% if link.child_active %} menu-drawer__menu-item--active{% endif %}"
                       >
                         {{ link.title | escape }}
-                        <span class="svg-wrapper">
-                          {{- 'icon-arrow.svg' | inline_asset_content -}}
+
+                          <span class="svg-wrapper">
+                          {{- 'downward.svg' | inline_asset_content -}}
                         </span>
                         <span class="svg-wrapper">
                           {{- 'icon-caret.svg' | inline_asset_content -}}
@@ -43,18 +44,15 @@
                         tabindex="-1"
                       >
                         <div class="menu-drawer__inner-submenu">
-                          <button class="menu-drawer__close-button link link--text focus-inset" aria-expanded="true">
-                            <span class="svg-wrapper">
-                              {{- 'icon-arrow.svg' | inline_asset_content -}}
-                            </span>
-                            {{ link.title | escape }}
-                          </button>
 
                           <ul class="menu-drawer__menu list-menu" role="list" tabindex="-1">
                             {%- for childlink in link.links -%}
                               <li>
-                                  {% assign image_url = childlink.object.featured_image | image_url: width: 100 %}
-                                  <img src="{{ image_url }}" alt="{{ childlink.title | escape }}" class="mega-menu__image" />
+                                  {% if childlink.type == 'collection_link' %}
+                                      {% assign image_url = childlink.object.featured_image | image_url: width: 100 %}
+                                      <img src="{{ image_url }}" alt="{{ childlink.title | escape }}" class="mega-menu__image" />
+                                  {% endif %}
+
 
                                 {%- if childlink.links == blank -%}
                                   <a
@@ -74,8 +72,9 @@
                                       class="menu-drawer__menu-item link link--text list-menu__item focus-inset"
                                     >
                                       {{ childlink.title | escape }}
+                                        <p>second</p>
                                       <span class="svg-wrapper">
-                                        {{- 'icon-arrow.svg' | inline_asset_content -}}
+                                        {{- 'downward.svg' | inline_asset_content -}}
                                       </span>
                                       <span class="svg-wrapper">
                                         {{- 'icon-caret.svg' | inline_asset_content -}}
@@ -85,16 +84,6 @@
                                       id="childlink-{{ childlink.handle | escape }}"
                                       class="menu-drawer__submenu has-submenu gradient motion-reduce"
                                     >
-                                      <button
-                                        class="menu-drawer__close-button link link--text focus-inset"
-                                        aria-expanded="true"
-                                      >
-                                        <span class="svg-wrapper">
-                                          {{- 'icon-arrow.svg' | inline_asset_content -}}
-                                        </span>
-                                        {{ childlink.title | escape }}
-                                      </button>
-
                                       <ul
                                         class="menu-drawer__menu list-menu"
                                         role="list"
@@ -102,6 +91,10 @@
                                       >
                                         {%- for grandchildlink in childlink.links -%}
                                           <li>
+                                              {% if grandchildlink.type == 'collection_link' %}
+                                                  {% assign image_url = grandchildlink.object.featured_image | image_url: width: 100 %}
+                                                  <img src="{{ image_url }}" alt="{{ childlink.title | escape }}" class="mega-menu__image" />
+                                              {% endif %}
                                             <a
                                               id="HeaderDrawer-{{ link.handle }}-{{ childlink.handle }}-{{ grandchildlink.handle }}"
                                               href="{{ grandchildlink.url }}"
@@ -125,16 +118,68 @@
                       </div>
                     </details>
                   {%- else -%}
-                    <a
-                      id="HeaderDrawer-{{ link.handle }}"
-                      href="{{ link.url }}"
-                      class="menu-drawer__menu-item list-menu__item link link--text focus-inset{% if link.current %} menu-drawer__menu-item--active{% endif %}"
-                      {% if link.current %}
-                        aria-current="page"
+
+                      {% assign link_handle = link.title | handleize | downcase %}
+                      {% assign check_block_present = false %}
+
+                      {% for block in section.blocks %}
+                          {% if block.type == 'collection_list' and block.settings.collection_menu_trigger == link_handle %}
+                              {% assign check_block_present = true %}
+                              {% break %}
+                          {% endif %}
+                          {% if block.type == 'promotion_image' and block.settings.target_link == link_handle %}
+                              {% assign check_block_present = true %}
+                              {% break %}
+                          {% endif %}
+                          {% if block.type == 'mini_banner' and block.settings.mini_banner_trigger == link_handle %}
+                              {% assign check_block_present = true %}
+                              {% break %}
+                          {% endif %}
+                          {% if block.type == 'category_image' and block.settings.category_menu_trigger == link_handle %}
+                              {% assign check_block_present = true %}
+                              {% break %}
+                          {% endif %}
+                      {% endfor %}
+
+                      {% if check_block_present %}
+                    <details id="Details-menu-drawer-menu-item-{{ forloop.index }}">
+                        <summary
+                                id="HeaderDrawer-{{ link.handle }}"
+                                class="menu-drawer__menu-item list-menu__item link link--text focus-inset{% if link.child_active %} menu-drawer__menu-item--active{% endif %}"
+                        >
+                            {{ link.title | escape }}
+
+                            <span class="svg-wrapper">
+                          {{- 'downward.svg' | inline_asset_content -}}
+                        </span>
+                            <span class="svg-wrapper">
+                          {{- 'icon-caret.svg' | inline_asset_content -}}
+                        </span>
+                        </summary>
+                        <div
+                                id="link-{{ link.handle | escape }}"
+                                class="menu-drawer__submenu has-submenu gradient motion-reduce"
+                                tabindex="-1"
+                        >
+
+                            {% render 'header-mega-menu-content', link: link  %}
+                        </div>
+
+                    </details>
+                      {% else %}
+                          <a
+                                  id="HeaderDrawer-{{ link.handle }}"
+                                  href="{{ link.url }}"
+                                  class="menu-drawer__menu-item list-menu__item link link--text focus-inset{% if link.current %} menu-drawer__menu-item--active{% endif %}"
+                                  {% if link.current %}
+                                      aria-current="page"
+                                  {% endif %}
+                          >
+                              {{ link.title | escape }}
+                          </a>
                       {% endif %}
-                    >
-                      {{ link.title | escape }}
-                    </a>
+
+
                   {%- endif -%}
                 </li>
               {%- endfor -%}
@@ -152,6 +197,7 @@
                     {%- if customer and customer.has_avatar? -%}
                       {{ customer | avatar }}
                     {%- else -%}
+
                       <span class="svg-wrapper">
                         {{- 'icon-account.svg' | inline_asset_content -}}
                       </span>
