--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -222,6 +222,14 @@
 
         {% render 'cstm-header-search', input_id: 'Search-In-Modal' %}
 
+  <div class="wishlist-link header__icon">
+    <a href="/pages/wishlist">
+       <span class="svg-wrapper">{{- 'icon-heart.svg' | inline_asset_content -}}</a>
+       <span id="wishlist-count"></span>
+    </a>
+  </div>
+
+
         {%- if shop.customer_accounts_enabled -%}
             <a
                     href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
