--- a/snippets/cstm-card-product.liquid
+++ b/snippets/cstm-card-product.liquid
@@ -472,6 +472,7 @@
           <div class="card__media{% if image_shape and image_shape != 'default' %} shape--{{ image_shape }} color-{{ settings.card_color_scheme }} gradient{% endif %}">
             <div class="media media--transparent media--hover-effect">
               {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
+              <a href="{{ card_product.url }}">
               <img
                 srcset="
                   {%- if card_product.featured_media.width >= 165 -%}{{ card_product.featured_media | image_url: width: 165 }} 165w,{%- endif -%}
@@ -514,12 +515,14 @@
                   height="{{ card_product.media[1].height }}"
                 >
               {%- endif -%}
+              </a>
             </div>
           </div>
 
           <div class="card__media{% if image_shape and image_shape != 'default' %} shape--{{ image_shape }} color-{{ settings.card_color_scheme }} gradient{% endif %}">
             <div class="media media--transparent media--hover-effect">
               {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
+               <a href="{{ card_product.url }}">
               <img
                 srcset="
                   {%- if card_product.featured_media.width >= 165 -%}{{ card_product.featured_media | image_url: width: 165 }} 165w,{%- endif -%}
@@ -562,6 +565,7 @@
                   height="{{ card_product.media[1].height }}"
                 >
               {%- endif -%}
+              </a>
             </div>
           </div>
         {%- endif -%}
