--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -440,7 +440,7 @@ document.addEventListener("DOMContentLoaded", function () {
       const countSpan = document.getElementById("wishlist-count");
 
       if (countSpan) {
-        countSpan.textContent = `(${wishlist.length})`;
+        countSpan.textContent = `${wishlist.length}`;
       }
     {% endif %}
   });
