--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -225,7 +225,7 @@
   <div class="wishlist-link header__icon">
     <a href="/pages/wishlist">
        <span class="svg-wrapper">{{- 'icon-heart.svg' | inline_asset_content -}}</a>
-       <span id="wishlist-count"></span>
+       <span id="wishlist-count">0</span>
     </a>
   </div>
 
