--- a/snippets/cstm-product-media-gallery.liquid
+++ b/snippets/cstm-product-media-gallery.liquid
@@ -69,7 +69,7 @@
           data-media-id="{{ section.id }}-{{ featured_media.id }}"
         >
           {%- assign media_position = 1 -%}
-          {% render 'product-thumbnail',
+          {% render 'cstm-product-thumbnail',
             media: featured_media,
             media_count: media_count,
             position: media_position,
