--- a/snippets/promotion-image.liquid
+++ b/snippets/promotion-image.liquid
@@ -1,4 +1,3 @@
-
 {% if block != blank and block.settings.image != blank %}
 
     {% style %}
@@ -92,7 +91,15 @@
         endcase
     %}
 
-    <div class="image-container mega-menu-image">
+    {% style %}
+        .position-right{
+        order:2;
+        }
+
+    {% endstyle %}
+
+    <div class="image-container mega-menu-image"
+         style="{% if block.settings.position == 'right' %}order:2;{% endif %}">
         <div class="image-wrapper">
             <img
                     src="{{ block.settings.image | img_url: img_dimensions }}"
